Adjust Width To Prevent Overflow
This involves removing horizontal padding in order to prevent overflow
in mobile view.

--- a/src/Components/ChatWrapper/TypeBar/TypeBar.module.css
+++ b/src/Components/ChatWrapper/TypeBar/TypeBar.module.css
@@ -14,8 +14,15 @@
   display: flex;
   flex-direction: row;
   flex: 1;
+  gap: 10px;
 }
 
 .textInput {
+  flex: 1;
+  width: 90%;
+}
+
+.textAndSubmit {
+  display: flex;
   flex: 1;
 }
